# mcp-generator

./: .cursorrules  .gitignore  LICENSE  README.md  TECHNICAL_DOCUMENTATION.md  blog-api-spec.yaml  generate_blog_client.py  package-lock.json  progress.md  pyproject.toml  requirements.txt  setup.py
mcp_cli/: __init__.py  cli.py  config.py  generators.py  mcp_tool_mapper.py  openapi_client_generator.py  openapi_utils.py  utils.py  validators.py
mcp_cli/templates/: tool_implementations.py.j2
mcp_cli/templates/config/: .env.example.j2  logging.yaml.j2  pyproject.toml.j2  requirements-dev.txt.j2  requirements.txt.j2  server_config.yaml.j2
mcp_cli/templates/docker/: .dockerignore.j2  Dockerfile.j2  docker-compose.yml.j2
mcp_cli/templates/docs/: README.md.j2  api_reference.md.j2  usage_examples.md.j2
mcp_cli/templates/openapi/: tools.py.j2
mcp_cli/templates/openapi_enhanced/: server.py.j2  tools.py.j2
mcp_cli/templates/project/: PROJECT_SUMMARY.md.j2
mcp_cli/templates/python/: __init__.py.j2  client.py.j2  config.py.j2  models.py.j2  server.py.j2  tools.py.j2
mcp_cli/templates/scripts/: run_server.py.j2
mcp_cli/templates/tests/: .coveragerc.j2  conftest.py.j2  fixtures.py.j2  pytest.ini.j2  test_config.py.j2  test_server.py.j2
scripts/: run_integration_tests.py
test-mcp-server/test-mcp-server/generated_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
test-mcp-server/test-mcp-server/generated_client/.github/workflows/: python.yml
test-mcp-server/test-mcp-server/generated_client/.openapi-generator/: FILES
test-mcp-server/test-mcp-server/generated_client/docs/: DefaultApi.md  Item.md
test-mcp-server/test-mcp-server/generated_client/generated_client/: __init__.py  api_client.py  configuration.py  rest.py
test-mcp-server/test-mcp-server/generated_client/generated_client/api/: __init__.py  default_api.py
test-mcp-server/test-mcp-server/generated_client/generated_client/models/: __init__.py
test-mcp-server/test-mcp-server/generated_client/test/: test_default_api.py  test_item.py
test-mcp-server/test-mcp-server/generated_client/test_service_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
test-mcp-server/test-mcp-server/generated_client/test_service_client/api/: __init__.py  default_api.py
test-mcp-server/test-mcp-server/generated_client/test_service_client/models/: __init__.py  item.py
test-output/lynnx-blog-mcp-server/: .coveragerc  .env.example  PROJECT_SUMMARY.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
test-output/lynnx-blog-mcp-server/config/: logging.yaml  server_config.yaml
test-output/lynnx-blog-mcp-server/docker/: Dockerfile  docker-compose.yml
test-output/lynnx-blog-mcp-server/scripts/: run_server.py
test-output/lynnx-blog-mcp-server/src/mcp_lynnx_blog_mcp_server/: __init__.py  client.py  config.py  models.py  server.py  tools.py
test-output/lynnx-blog-mcp-server/tests/: conftest.py
test-output/lynnx-blog-mcp-server/tests/fixtures/: test_data.py
test-output/lynnx-blog-mcp-server/tests/unit/: test_config.py  test_server.py
tests/: conftest.py  pytest.ini  test_cli_tool.py
tests/fixtures/: __init__.py  test_data.py
tests/integration/: README.md  __init__.py  test_integration.py  test_mcp_generator_integration.py  test_openapi_enhanced_generator_integration.py
tests/unit/: __init__.py  test_config.py  test_docker.py  test_generated_client.py  test_generators.py  test_mcp_generator.py  test_mcp_tool_mapper.py  test_mcp_tool_mapper_implementations.py  test_openapi.py  test_openapi_client_generator.py  test_openapi_enhanced.py  test_openapi_enhanced_generator.py  test_project_structure.py  test_project_structure_generator.py
tests/unit/MCPGenerator/: test_test_generator.py
tests/unit/mcp_generators/: test_config_generator.py  test_project_structure_generator.py  test_test_generator.py
tests/unit/mcp_tool_mapper/: test_generate_definitions.py  test_generate_implementations.py  test_tool_generation.py
tests/unit/specialized_generators/: test_openapi_enhanced.py
