[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-cli"
version = "1.0.5"
description = "CLI tool for generating MCP (Model Context Protocol) servers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Vineet Kothari", email = "vineetkothari23@gmail.com"}
]
keywords = ["mcp", "model-context-protocol", "openapi", "code-generation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intendeds Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "tomli>=2.0.0",
    "packaging>=21.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.0.0",
]

[project.scripts]
mcp-cli = "mcp_cli.cli:cli"

[project.urls]
Homepage = "https://github.com/your-org/mcp-cli"
Documentation = "https://github.com/your-org/mcp-cli/blob/main/README.md"
Repository = "https://github.com/your-org/mcp-cli.git"
Issues = "https://github.com/your-org/mcp-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_cli*"]

[tool.setuptools.package-data]
mcp_cli = ["templates/**/*"]

# Configuration for development tools
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=mcp_cli",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
] 